--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <body>
     <div class="webgl-content">
 
-    <div id="unityContainer" style="position:relative; width: 100vw; height: 100vh; background: #CD5C5C"></div>
+    <div id="unityContainer" style="position:relative; width: 100vw; height: 100vh"></div>
 
     <!-- VK Full Screen -->
     <div id="yandex_rtb_R-A-1343857-1" style="position: absolute; top: 16%; width: 100vw; height: 67vh"></div>
