--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
       function() {
         var geo_location = rParams.ip_geo_location.split(",");
         var language = geo_location[0];
+        console.log(language);
         unityInstance.SendMessage('PlayerManager', 'GetPlayerLanguage', language);
         unityInstance.SendMessage('PlayerManager', 'GetPlayerName', rParams.user_name);
         unityInstance.SendMessage('PlayerManager', 'PlayerAuthorized');
